src/views/monitorView.css
.treez-monitor-progress-panel {
	background-color: white;
	font-family: Consolas;
	font-size: 12px;
	padding: 2px;
	overflow:auto;
	width:100% !important;
	height:100% !important;
}

.treez-monitor-logging-panel {
	background-color: white;
	font-family: Consolas;
	font-size: 12px;
	padding: 2px;
	white-space: nowrap;
	overflow:auto;
	height:98% !important;
	width:100% !important;
}

.treez-monitor-progress-collapsible-header {
	position: relative;
	font-size: 12px;	
	vertical-align: middle;
	height:25px;	
	padding:0;
}

.treez-monitor-progress-collapsible-symbol {	
	position:absolute;	
	top:-10px;	
	font-size: 24px;		
}

.treez-monitor-progress-title {
	color: black;	
	padding-left:15px;		
}

.treez-monitor-progress-description {
	color: black;
}

.treez-monitor-progress-toolbar {
	padding-right: 10px;
	float: right;
}

.treez-monitor-progress-label {
	padding-right: 10px;
	color: black;
}

.treez-monitor-progress-cancel-button {
	height: 12px;
	padding-bottom: 2px;
	border: none;
	-webkit-border-radius: 3px;
	box-shadow: inset 0 0 0 1px #e82734, inset 0 0 0 2px #f69b9c;
	background-color: #e82734;
}

.treez-monitor-progress-canceled-symbol {
	font-weight: bold;
	color: #e82734;
	display: none;
}

.treez-monitor-progress-background {
	background-color: lightgray;
	height: 3px;	
	padding:0;
	margin-top:-3px;
}

.treez-monitor-progress-bar {	
	background: linear-gradient(#65c46f, green);	
	height: 3px;	
}

.treez-monitor-progress-collapsible-content {
	padding-left: 10px;
	display: block;
}

.treez-monitor-progress-collapsible-content.collapsed {
	padding-left: 10px;
	display: none;
}

.treez-monitor-titled {
	border-bottom: 1px solid lightgrey;
	position:relative;
}

.treez-monitor-titled .treez-monitor-title {	
  visibility: hidden; 
  background-color: #e0e8f1;
  color:black;
  padding:5px; 
  border-radius: 6px; 
  position:absolute;
  top:10%;
  left:10%;
  z-index: 1; 
  opacity: 1;  
}



.treez-monitor-titled:hover .treez-monitor-title {
  visibility: visible;
  opacity: 1;
}

.treez-monitor-title:hover {
  visibility: visible;
  opacity: 1;
}

